--- a/Microelettronica - 7° laboratorio/main.tex
+++ b/Microelettronica - 7° laboratorio/main.tex
@@ -41,13 +41,11 @@
     \clearpage
     
     \section{Stadio digitale Arduino}
-    \input{digital}
-    \clearpage
-    
+    \input{digital}    
     \section{Misura dei BPM}
-    \input{bpm}
-    \clearpage
-    
+    \input{bpm}    
     \section{Misura saturazione $O_2$}
     \input{O2}
+    \section{Foto del display}
+    \input{foto}
 \end{document}
